--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,18 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "bashdb",
+            "request": "launch",
+            "name": "Bash-Debug (select script from list of sh files)",
+            "cwd": "${workspaceFolder}",
+            "program": "${command:SelectScriptName}",
+            "args": [],
+            "env": {
+                "QUIET": false,
+                "VERBOSE": 1
+            },
+        },
+        {
             "name": "Help",
             "type": "coreclr",
             "request": "launch",
