--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,49 +10,49 @@ on:
   workflow_dispatch:
     inputs:
       os:
-        description: 'JSON array of runners'
+        description: "JSON array of runners"
         type: string
         default: '["ubuntu-latest"]'
         required: true
 
       dotnet-version:
-        description: 'Version of .NET SDK to use'
+        description: "Version of .NET SDK to use"
         type: string
-        default: '9.0.x'
+        default: "9.0.x"
         required: true
 
       test-project:
-        description: 'Path to test project'
+        description: "Path to test project"
         type: string
-        default: './test/UlidType.Tests/UlidType.Tests.csproj'
+        default: "./test/UlidType.Tests/UlidType.Tests.csproj"
         required: true
 
-      coverage-threshold:
-        description: 'Minimum acceptable code coverage percentage'
+      min_coverage_pct:
+        description: "Minimum acceptable code coverage percentage"
         type: number
         default: 75
         required: true
 
       run-benchmarks:
-        description: 'Whether to run benchmarks and compare against baseline'
+        description: "Whether to run benchmarks and compare against baseline"
         type: boolean
         default: true
         required: true
 
       benchmark-project:
-        description: 'Path to benchmark project'
+        description: "Path to benchmark project"
         type: string
-        default: './benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj'
+        default: "./benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj"
         required: true
 
       regression-threshold:
-        description: 'Maximum acceptable performance regression percentage'
+        description: "Maximum acceptable performance regression percentage"
         type: number
         default: 10
         required: true
 
       force-new-baseline:
-        description: 'Whether to force new baseline (if true, no regression check is done)'
+        description: "Whether to force new baseline (if true, no regression check is done)"
         type: boolean
         default: false
         required: true
@@ -71,17 +71,17 @@ jobs:
           (!contains(github.event.head_commit.message, '[no ci]'  ))    }}
     with:
       dotnet-version: ${{ inputs.dotnet-version || vars.DOTNET_VERSION || '9.0.x' }}
-      os:             ${{ inputs.os             || vars.MATRIX_OS      || '["ubuntu-latest"]' }}
+      os: ${{ inputs.os             || vars.MATRIX_OS      || '["ubuntu-latest"]' }}
 
   test:
     name: Test
     needs: build
     uses: ./.github/workflows/test.yml
     with:
-      dotnet-version:     ${{ inputs.dotnet-version     || vars.DOTNET_VERSION               || '9.0.x' }}
-      os:                 ${{ inputs.os                 || vars.MATRIX_OS                    || '["ubuntu-latest"]' }}
-      test-project:       ${{ inputs.test-project       || vars.TEST_PROJECT                 || './test/UlidType.Tests/UlidType.Tests.csproj' }}
-      coverage-threshold: ${{ inputs.coverage-threshold || fromJSON(vars.COVERAGE_THRESHOLD) || 75 }}
+      dotnet-version: ${{ inputs.dotnet-version     || vars.DOTNET_VERSION               || '9.0.x' }}
+      os: ${{ inputs.os                 || vars.MATRIX_OS                    || '["ubuntu-latest"]' }}
+      test-project: ${{ inputs.test-project       || vars.TEST_PROJECT                 || './test/UlidType.Tests/UlidType.Tests.csproj' }}
+      min_coverage_pct: ${{ inputs.min_coverage_pct || fromJSON(vars.MIN_COVERAGE_PCT) || 75 }}
 
   benchmarks:
     name: Benchmarks (Linux only)
@@ -89,7 +89,7 @@ jobs:
     if: ${{ inputs.run-benchmarks || fromJSON(vars.RUN_BENCHMARKS) || true }}
     uses: ./.github/workflows/benchmarks.yml
     with:
-      dotnet-version:       ${{ inputs.dotnet-version       || vars.DOTNET_VERSION                 || '9.0.x' }}
-      benchmark-project:    ${{ inputs.benchmark-project    || vars.BENCHMARK_PROJECT              || './benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj' }}
-      force-new-baseline:   ${{ inputs.force-new-baseline   || fromJSON(vars.FORCE_NEW_BASELINE)   || false }}
+      dotnet-version: ${{ inputs.dotnet-version       || vars.DOTNET_VERSION                 || '9.0.x' }}
+      benchmark-project: ${{ inputs.benchmark-project    || vars.BENCHMARK_PROJECT              || './benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj' }}
+      force-new-baseline: ${{ inputs.force-new-baseline   || fromJSON(vars.FORCE_NEW_BASELINE)   || false }}
       regression-threshold: ${{ inputs.regression-threshold || fromJSON(vars.REGRESSION_THRESHOLD) || 10 }}
