--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,3 +47,17 @@ jobs:
 
       - name: Build (${{ inputs.configuration }})
         run: dotnet build --configuration ${{ inputs.configuration }}
+
+      - name: ShellCheck
+        uses: ludeeus/action-shellcheck@master
+        env:
+          SHELLCHECK_OPTS: --external-sources --check-sourced
+        with:
+          scandir: ./scripts/bash
+          check_together: true
+          severity: error
+          ignore_names: |
+            _common.sh
+            run-test-utils.sh
+            scratch*.sh
+            self-test.sh
