--- a/benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj
+++ b/benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <RootNamespace>vm2.UlidType.Benchmark</RootNamespace>
+        <DefineConstants>$(DefineConstants);$(UserDefined)</DefineConstants>
     </PropertyGroup>
 
     <ItemGroup>
