--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -90,7 +90,7 @@ jobs:
       test-project: ${{ inputs.test-project || vars.TEST_PROJECT || './test/UlidType.Tests/UlidType.Tests.csproj' }}
       configuration: ${{ inputs.build-configuration ||vars.BUILD_CONFIGURATION || 'Release' }}
       define: ${{ inputs.define || vars.DEFINE || '' }}
-      verbose: ${{ inputs.verbose || vars.VERBOSE || false }}
+      verbose: ${{ inputs.verbose || fromJSON(vars.VERBOSE) || false }}
       min_coverage_pct: ${{ fromJSON(vars.MIN_COVERAGE_PCT) || 75 }}
 
   benchmarks:
@@ -104,6 +104,6 @@ jobs:
       benchmark-project: ${{ inputs.benchmark-project || vars.BENCHMARK_PROJECT || './benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj' }}
       configuration: ${{ inputs.build-configuration ||vars.BUILD_CONFIGURATION || 'Release' }}
       define: ${{ inputs.define || vars.DEFINE || '' }}
-      verbose: ${{ inputs.verbose || vars.VERBOSE || false }}
+      verbose: ${{ inputs.verbose || fromJSON(vars.VERBOSE) || false }}
       max-regression-pct: ${{ fromJSON(vars.MAX_REGRESSION_PCT) || 10 }}
       force-new-baseline: ${{ inputs.force-new-baseline || fromJSON(vars.FORCE_NEW_BASELINE) || false }}
