--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -95,10 +95,10 @@ jobs:
         shell: bash
         env:
           FORCE_NEW_BASELINE: ${{ inputs.force-new-baseline }}
-        run: |
-          ./scripts/bash/run-benchmarks.sh ${{ inputs.benchmark-project }} \
-              --verbose "${{ inputs.verbose }}" \
-              --max_regression_pct "${{ inputs.max-regression-pct }}" \
+        run: >-
+          ./scripts/bash/run-benchmarks.sh ${{ inputs.benchmark-project }}
+              --verbose "${{ inputs.verbose }}"
+              --max_regression_pct "${{ inputs.max-regression-pct }}"
               --define "${{ inputs.define }}"
               --configuration "${{ inputs.configuration }}"
 
